--- a/conf/default.yml
+++ b/conf/default.yml
@@ -5,7 +5,7 @@ app.contact.dns.domain: mycaldera.caldera
 app.contact.dns.socket: 0.0.0.0:8853
 app.contact.gist: API_KEY
 app.contact.html: /weather
-app.contact.http: http://0.0.0.0:8888
+app.contact.http: http://0.0.0.0:8080
 app.contact.tcp: 0.0.0.0:7010
 app.contact.udp: 0.0.0.0:7011
 app.contact.websocket: 0.0.0.0:7012
@@ -25,7 +25,8 @@ plugins:
 - sandcat
 - stockpile
 - training
-port: 8888
+- exfiltrationscenario
+port: 8080
 reports_dir: /tmp
 requirements:
   go:
